--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,8 @@
 {cover_enabled, true}.
 {erl_opts, [debug_info, fail_on_warning]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
-{lib_dirs, [".."]}.
+{deps, [
+        {riak_kv, ".*", {hg, "http://bitbucket.org/basho/riak_kv", "tip"}},
+        {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
+       ]}.
+
