--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,7 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, ".*", {hg, "http://bitbucket.org/basho/riak_kv", "tip"}},
-        {riak_core, ".*", {hg, "http://bitbucket.org/basho/riak_core", "tip"}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "riak_kv-0.14"}}},
+        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {branch, "riak_core-0.14"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
        ]}.
-
