Fix deps tags for riak_kv and riak_core: my newly-discovered git rebase powers were used for good, except that I really didn't want the patch as it was.  {sigh}

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "riak_kv-0.14"}}},
-        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {branch, "riak_core-0.14"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", "HEAD"}},
+        {riak_core, ".*", {git, "git://github.com/basho/riak_core", "HEAD"}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
        ]}.
