--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,6 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "riak_kv-0.14"}}},
-        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {branch, "riak_core-0.14"}}},
+        {riak_kv, "0.14.*", {git, "git://github.com/basho/riak_kv", {tag, "riak_kv-0.14.0"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
        ]}.
