--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {cover_enabled, true}.
-{erl_opts, [debug_info, fail_on_warning]}.
+{erl_opts, [debug_info, warnings_as_errors]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, "0.14.*", {git, "git://github.com/basho/riak_kv", {branch, "riak_kv-0.14"}}},
+        {riak_kv, "0.14.*", {git, "git://github.com/basho/riak_kv", {tag, "riak_kv-0.14.2"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
        ]}.
