--- a/rebar.config
+++ b/rebar.config
@@ -4,5 +4,7 @@
 {lib_dirs, [".."]}.
 {deps, [
         {riak_kv, "0.14.*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
+        {riak_search, "0.14.*", {git, "git://github.com/basho/riak_search",
+                                 {branch, "master"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
        ]}.
