--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,8 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, "0.14.*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
-        {riak_search, "0.14.*", {git, "git://github.com/basho/riak_search",
-                                 {branch, "master"}}},
+        {riak_kv, "1.0.0", {git, "git://github.com/basho/riak_kv", {branch, "1.0"}}},
+        {riak_search, "1.0.0", {git, "git://github.com/basho/riak_search",
+                                 {branch, "1.0"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
        ]}.
