Change dependencies to point to head of master

--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,8 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, "0.14.*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
-        {riak_search, "0.14.*", {git, "git://github.com/basho/riak_search",
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
+        {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {branch, "master"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
        ]}.
