--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,8 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, "1.0.1", {git, "git://github.com/basho/riak_kv", {branch, "1.0"}}},
+        {riak_kv, "1.0.1", {git, "git://github.com/basho/riak_kv", {tag, "1.0.1"}}},
         {riak_search, "1.0.1", {git, "git://github.com/basho/riak_search",
-                                 {branch, "1.0"}}},
+                                 {tag, "1.0.1"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "b0eea7e"}}
        ]}.
