--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,8 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
-        {riak_search, ".*", {git, "git://github.com/basho/riak_search",
-                                 {branch, "master"}}},
-        {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
+        {riak_kv, "1.1.0", {git, "git://github.com/basho/riak_kv", {tag, "1.1.0"}}},
+        {riak_search, "1.1.0", {git, "git://github.com/basho/riak_search",
+                                 {tag, "1.1.0"}}},
+        {meck, "0.7.1", {git, "git://github.com/eproxus/meck.git", {tag, "850fbff7"}}}
        ]}.
