--- a/rebar.config
+++ b/rebar.config
@@ -6,5 +6,6 @@
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {branch, "master"}}},
-        {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
+        {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
+        {ranch, ".*", {git, "git://github.com/extend/ranch.git", "HEAD"}}
        ]}.
