--- a/rebar.config
+++ b/rebar.config
@@ -6,5 +6,5 @@
         {riak_kv, "1.1.2", {git, "git://github.com/basho/riak_kv", {tag, "1.1.2"}}},
         {riak_search, "1.1.2", {git, "git://github.com/basho/riak_search",
                                  {tag, "1.1.2"}}},
-        {meck, "0.7.1", {git, "git://github.com/eproxus/meck.git", {tag, "850fbff7"}}}
+        {meck, "0.7.*", {git, "git://github.com/eproxus/meck.git", {tag, "850fbff7"}}}
        ]}.
