Pin ranch dep at 0.2.1 because of pending upstream changes

--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,5 @@
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {branch, "master"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
-        {ranch, ".*", {git, "git://github.com/extend/ranch.git", "HEAD"}}
+        {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}}
        ]}.
