--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,6 @@
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {branch, "master"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
-        {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}}
+        {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}},
+        {riak_repl_pb_api, "0.1.0", {git, "git@github.com:basho/riak_repl_pb_api", {branch, "master"}}}
        ]}.
