--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,6 @@
         {riak_search, "1.2.*", {git, "git://github.com/basho/riak_search",
                                  {branch, "1.2"}}},
         {meck, "0.7.2", {git, "git://github.com/eproxus/meck.git", {tag, "0.7.2"}}},
-        {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}}
+        {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}},
+        {riak_repl_pb_api, "0.1.0", {git, "git@github.com:basho/riak_repl_pb_api", {branch, "master"}}}
        ]}.
