added snappy/gzip compression
configure by adding:
{compression, snappy}
to riak_repl section of app.config

Available compression methods:
snappy -> fast, moderate compression
gzip   -> slow, high compression
term   -> same as gzip, but uses term_to_binary

- added uncompressed stats
- removed syncv1

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,8 @@
 {deps, [
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
-                                 {branch, "master"}}},
+                             {branch, "master"}}},
+        {snappy, ".*", {git,"git://github.com/fdmanana/snappy-erlang-nif.git", {branch, "master"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
         {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}}
        ]}.
