Make riak_kv dependency point at 1.2 branch to pick up point release changes

--- a/rebar.config
+++ b/rebar.config
@@ -3,9 +3,9 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, "1.2.0", {git, "git://github.com/basho/riak_kv", {tag, "1.2.0"}}},
-        {riak_search, "1.2.0", {git, "git://github.com/basho/riak_search",
-                                 {tag, "1.2.0"}}},
+        {riak_kv, "1.2.*", {git, "git://github.com/basho/riak_kv", {branch, "1.2"}}},
+        {riak_search, "1.2.*", {git, "git://github.com/basho/riak_search",
+                                 {branch, "1.2"}}},
         {meck, "0.7.2", {git, "git://github.com/eproxus/meck.git", {tag, "0.7.2"}}},
         {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}}
        ]}.
