--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,6 @@
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {branch, "master"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
+        {erl_lfq, ".*", {git, "git://github.com/argv0/erl_lfq.git", "HEAD"}},
         {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}}
        ]}.
