--- a/rebar.config
+++ b/rebar.config
@@ -3,9 +3,9 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, "1.2.*", {git, "git://github.com/basho/riak_kv", {branch, "1.2"}}},
+        {riak_kv, "1.2.*", {git, "git://github.com/basho/riak_kv", {tag, "1.2.1p1"}}},
         {riak_search, "1.2.*", {git, "git://github.com/basho/riak_search",
-                                 {branch, "1.2"}}},
+                                 {tag, "1.2.1p1"}}},
         {meck, "0.7.2", {git, "git://github.com/eproxus/meck.git", {tag, "0.7.2"}}},
         {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}},
         {riak_repl_pb_api, "0.1.0", {git, "git@github.com:basho/riak_repl_pb_api", {tag, "0.1.0"}}}
