Add riak_repl_pb_api dep so builds work

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,5 @@
+%%-*- mode: erlang -*-
+
 {cover_enabled, true}.
 {erl_opts, [debug_info, fail_on_warning, {parse_transform, lager_transform}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
@@ -7,5 +9,6 @@
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {branch, "master"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
-        {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}}
+        {ranch, "0.2.1", {git, "git://github.com/extend/ranch.git", {tag, "0.2.1"}}},
+        {riak_repl_pb_api, "0.1.0", {git, "git@github.com:basho/riak_repl_pb_api", {tag, "0.1.0"}}}
        ]}.
