--- a/rebar.config
+++ b/rebar.config
@@ -5,10 +5,10 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
-        {riak_search, ".*", {git, "git://github.com/basho/riak_search",
-                                 {branch, "master"}}},
-        {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
+        {riak_kv, "1.3.0", {git, "git://github.com/basho/riak_kv", {tag, "1.3.0"}}},
+        {riak_search, "1.3.0", {git, "git://github.com/basho/riak_search",
+                                 {tag, "1.3.0"}}},
+        {meck, "0.7.2", {git, "git://github.com/eproxus/meck.git", {tag, "0.7.2-2-gd6230ae"}}},
         {ranch, "0.4.0", {git, "git://github.com/extend/ranch.git", {tag, "0.4.0"}}},
-        {riak_repl_pb_api, "0.1.0", {git, "git@github.com:basho/riak_repl_pb_api", {tag, "0.1.0"}}}
+        {riak_repl_pb_api, "0.2.0", {git, "git@github.com:basho/riak_repl_pb_api", {tag, "0.2.0"}}}
        ]}.
