--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
+        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {branch, "master"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {branch, "master"}}},
