--- a/rebar.config
+++ b/rebar.config
@@ -11,5 +11,5 @@
                                  {branch, "master"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
         {ranch, "0.4.0", {git, "git://github.com/extend/ranch.git", {tag, "0.4.0"}}},
-        {riak_repl_pb_api, "0.2.2", {git, "git@github.com:basho/riak_repl_pb_api", {tag, "0.2.2"}}}
+        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api", {branch, "master"}}}
        ]}.
