--- a/rebar.config
+++ b/rebar.config
@@ -10,6 +10,6 @@
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {branch, "master"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
-        {ranch, "0.4.0", {git, "git://github.com/extend/ranch.git", {tag, "0.4.0"}}},
+        {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
         {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api", {branch, "master"}}}
        ]}.
