--- a/rebar.config
+++ b/rebar.config
@@ -5,10 +5,10 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {branch, "master"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "master"}}},
+        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {branch, "develop"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "develop"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
-                                 {branch, "master"}}},
+                                 {branch, "develop"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
-        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api", {branch, "master"}}}
+        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api", {branch, "develop"}}}
        ]}.
