--- a/rebar.config
+++ b/rebar.config
@@ -9,6 +9,6 @@
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "develop"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {branch, "develop"}}},
-        {meck, ".*", {git, "git://github.com/eproxus/meck.git", {tag, "0.7.2-56-g8433cf2"}}},
+        {meck, "0.8.1", {git, "git://github.com/basho/meck.git", {tag, "0.8.1"}}},
         {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api", {branch, "develop"}}}
        ]}.
