Standardize on a rebar.config dep format to reduce conflicts

--- a/rebar.config
+++ b/rebar.config
@@ -3,12 +3,9 @@
 {cover_enabled, true}.
 {erl_opts, [debug_info, fail_on_warning, {parse_transform, lager_transform}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
-{lib_dirs, [".."]}.
 {deps, [
-        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {branch, "develop"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "develop"}}},
-        {riak_search, ".*", {git, "git://github.com/basho/riak_search",
-                                 {branch, "develop"}}},
-        {meck, "0.8.1", {git, "git://github.com/basho/meck.git", {tag, "0.8.1"}}},
-        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api", {branch, "develop"}}}
+        {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "develop"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
+        {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "develop"}}},
+        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "develop"}}}
        ]}.
