--- a/rebar.config
+++ b/rebar.config
@@ -5,8 +5,8 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {tag, "1.4.2"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {tag, "1.4.2"}}},
+        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {tag, "1.4.3"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {tag, "1.4.2p1"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search",
                                  {tag, "1.4.2"}}},
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
