--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {erl_opts, [debug_info, fail_on_warning, {parse_transform, lager_transform}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
 {deps, [
-        {lager, "2.0.0", {git, "git://github.com/basho/lager.git", {tag, "2.0.0"}}},
+        {lager, "2.0.*", {git, "git://github.com/basho/lager.git", {tag, "2.0.1"}}},
         {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {branch, "develop"}}},
         {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "develop"}}},
         {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "develop"}}}
