Update lib_dirs value in rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 {cover_enabled, true}.
 {erl_opts, [debug_info, fail_on_warning, {parse_transform, lager_transform}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
-{lib_dirs, [".."]}.
+{lib_dirs, ["deps", ".."]}.
 {deps, [
         {riak_core, ".*", {git, "git://github.com/basho/riak_core", {branch, "develop"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "develop"}}},
