--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,6 @@
 {deps, [
         {lager, "2.0.*", {git, "git://github.com/basho/lager.git", {tag, "2.0.1"}}},
         {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {branch, "develop"}}},
-        {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {branch, "develop"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
         {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "develop"}}}
        ]}.
