--- a/rebar.config
+++ b/rebar.config
@@ -5,10 +5,9 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {deps, [
-        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {tag, "1.4.3"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {tag, "1.4.2p1"}}},
-        {riak_search, ".*", {git, "git://github.com/basho/riak_search",
-                                 {tag, "1.4.2"}}},
-        {meck, ".*", {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
-        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api", {tag, "0.2.4"}}}
+        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {tag, "1.4.4"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {branch, "1.4"}}},
+        {riak_search, ".*", {git, "git://github.com/basho/riak_search", {branch, "1.4"}}},
+        {meck, ".*", {git, "git://github.com/basho/meck.git", {tag, "0.8.1"}}},
+        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api", {tag, "0.2.5"}}}
        ]}.
