--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {deps, [
         {lager, "2.0.*", {git, "git://github.com/basho/lager.git", {tag, "2.0.1"}}},
+        {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
         {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {branch, "develop"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
         {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "develop"}}}
