added if flag terms to interfaces to fix various tests

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 %%-*- mode: erlang -*-
 
 {cover_enabled, true}.
-{erl_opts, [debug_info, warnings_as_errors, {parse_transform, lager_transform}]}.
+{erl_opts, [debug_info, {parse_transform, lager_transform}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
 {deps, [
         {lager, "2.0.*", {git, "git://github.com/basho/lager.git", {tag, "2.0.1"}}},
