--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,8 @@
 {erl_opts, [debug_info, fail_on_warning, {parse_transform, lager_transform}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
+{xref_checks, []}.
+{xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
 {deps, [
         {riak_core, ".*", {git, "git://github.com/basho/riak_core", {tag, "1.4.10"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {tag, "1.4.10"}}},
