--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,8 @@
 {cover_enabled, true}.
 {erl_opts, [debug_info, warnings_as_errors, {parse_transform, lager_transform}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
+{xref_checks, []}.
+{xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
 {deps, [
         {lager, "2.0.*", {git, "git://github.com/basho/lager.git", {tag, "2.0.2"}}},
         {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
