--- a/rebar.config
+++ b/rebar.config
@@ -5,8 +5,9 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
+
 {deps, [
-        {lager, "2.0.*", {git, "git://github.com/basho/lager.git", {tag, "2.0.2"}}},
+        {lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
         {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
         {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {branch, "develop"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
