--- a/rebar.config
+++ b/rebar.config
@@ -13,3 +13,5 @@
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
         {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "develop"}}}
        ]}.
+
+{edoc_opts, [{preprocess, true}]}.
