--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
 {erl_first_files, ["src/gen_leader.erl"]}.
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
+{eunit_opts, [verbose]}.
 
 {deps, [
         {lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
