--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 %%-*- mode: erlang -*-
 
-{cover_enabled, true}.
-{erl_opts, [debug_info, fail_on_warning, {parse_transform, lager_transform}]}.
+{require_otp_vsn, "R14B0[234]|R15"}.
+{cover_enabled, false}.
+{erl_opts, [debug_info, warnings_as_errors, {parse_transform, lager_transform}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
 {lib_dirs, [".."]}.
 {xref_checks, []}.
