Hand pick eunit test improvements from 2.0
Hand picked enough changes from the work that Kelly M. and Jon A. did to
stabilize eunit tests to make them all green.

--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,7 @@
 {lib_dirs, [".."]}.
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
+{eunit_opts, [verbose]}.
 {deps, [
         {riak_core, ".*", {git, "git://github.com/basho/riak_core", {tag, "1.4.10"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {tag, "1.4.10"}}},
