--- a/rebar.config
+++ b/rebar.config
@@ -9,9 +9,9 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
 {eunit_opts, [verbose]}.
 {deps, [
-        {riak_core, ".*", {git, "git://github.com/basho/riak_core", {tag, "1.4.10"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv", {tag, "1.4.11"}}},
-        {riak_search, ".*", {git, "git://github.com/basho/riak_search", {tag, "1.4.11"}}},
+        {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {tag, "1.4.12"}}},
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {tag, "1.4.12"}}},
+        {riak_search, ".*", {git, "git://github.com/basho/riak_search.git", {tag, "1.4.12"}}},
         {meck, ".*", {git, "git://github.com/basho/meck.git", {tag, "0.8.1"}}},
         {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api", {tag, "0.2.5"}}}
        ]}.
