Add support for Erlang 17.

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,9 @@
 %%-*- mode: erlang -*-
 
 {cover_enabled, true}.
-{erl_opts, [debug_info, warnings_as_errors, {parse_transform, lager_transform}]}.
+{erl_opts, [debug_info, warnings_as_errors,
+            {parse_transform, lager_transform},
+            {platform_define, "^[0-9]+", namespaced_types}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
