Update rebar dependencies for OTP-17 development. Replace per-file namespaced_types handling with otp_compat package. Add/update file copyright headers where deterministically appropriate.
Note:
Many updates to rebar.config files have been scripted to ensure
consistency and likely have re-ordered configuration settings and options.
While the file may look significantly different, the content other than
dependency updates (and, in some cases, more stringent compilation options)
should be the same from rebar's perspective.

--- a/rebar.config
+++ b/rebar.config
@@ -1,19 +1,40 @@
 %%-*- mode: erlang -*-
+%% -------------------------------------------------------------------
+%%
+%% Copyright (c) 2010-2015 Basho Technologies, Inc.
+%%
+%% This file is provided to you under the Apache License,
+%% Version 2.0 (the "License"); you may not use this file
+%% except in compliance with the License.  You may obtain
+%% a copy of the License at
+%%
+%%   http://www.apache.org/licenses/LICENSE-2.0
+%%
+%% Unless required by applicable law or agreed to in writing,
+%% software distributed under the License is distributed on an
+%% "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+%% KIND, either express or implied.  See the License for the
+%% specific language governing permissions and limitations
+%% under the License.
+%%
+%% -------------------------------------------------------------------
 
 {cover_enabled, true}.
-{erl_opts, [debug_info, warnings_as_errors,
-            {parse_transform, lager_transform},
-            {platform_define, "^[0-9]+", namespaced_types}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
+{erl_opts, [
+    debug_info,
+    warnings_as_errors,
+    {parse_transform, lager_transform},
+    {platform_define, "^[1-9][0-9]+", namespaced_types}
+]}.
+{deps, [
+    {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {branch, "develop"}}},
+    {lager, ".*", {git, "git://github.com/basho/lager.git", {branch, "feature/otp-17"}}},
+    {otp_compat, ".*", {git, "git://github.com/tburghart/otp_compat.git", {branch, "master"}}},
+    {ranch, ".*", {git, "git://github.com/basho/ranch.git", {branch, "master"}}},
+    {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "feature/otp-17"}}},
+    {riak_repl_pb_api, ".*", {git, "git://github.com/basho/riak_repl_pb_api.git", {branch, "feature/otp-17"}}}
+]}.
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
-
-{deps, [
-        {lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
-        {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
-        {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
-        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "develop"}}}
-       ]}.
-
 {edoc_opts, [{preprocess, true}]}.
