fix git URLs for private repos ... again

--- a/rebar.config
+++ b/rebar.config
@@ -33,7 +33,7 @@
     {otp_compat, ".*", {git, "git://github.com/tburghart/otp_compat.git", {branch, "master"}}},
     {ranch, ".*", {git, "git://github.com/basho/ranch.git", {branch, "master"}}},
     {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "feature/otp-17"}}},
-    {riak_repl_pb_api, ".*", {git, "git@github.com/basho/riak_repl_pb_api.git", {branch, "feature/otp-17"}}}
+    {riak_repl_pb_api, ".*", {git, "git@github.com:/basho/riak_repl_pb_api.git", {branch, "feature/otp-17"}}}
 ]}.
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
