--- a/rebar.config
+++ b/rebar.config
@@ -25,7 +25,7 @@
     debug_info,
     warnings_as_errors,
     {parse_transform, lager_transform},
-    {platform_define, "^[1-9][0-9]+", namespaced_types}
+    {platform_define, "^R[1-9]", no_otp_namespaced_types}
 ]}.
 {deps, [
     {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {branch, "develop"}}},
