--- a/rebar.config
+++ b/rebar.config
@@ -12,8 +12,8 @@
         {lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
         {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
         {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
-        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "develop"}}}
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "2.1"}}},
+        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "2.1"}}}
        ]}.
 
 {edoc_opts, [{preprocess, true}]}.
