--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
 
 {deps, [
-        {lager, "2.0.3", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
+        {lager, "2.*", {git, "git://github.com/basho/lager.git", {branch, "2.x"}}},
         {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
         {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}},
