--- a/rebar.config
+++ b/rebar.config
@@ -12,8 +12,8 @@
         {lager, "(2.0|2.1|2.2).*", {git, "git://github.com/basho/lager.git", {tag, "2.2.0"}}},
         {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
         {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "end-to-end/timeseries"}}},
-        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "end-to-end/timeseries"}}}
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "riak_ts-develop-1.2"}}},
+        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "riak_ts-develop-1.2"}}}
        ]}.
 
 {edoc_opts, [{preprocess, true}]}.
