--- a/rebar.config
+++ b/rebar.config
@@ -9,11 +9,11 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
 
 {deps, [
-        {lager, "(2.0|2.1|2.2).*", {git, "git://github.com/basho/lager.git", {tag, "2.2.3"}}},
-        {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
-        {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {branch, "riak_ts-develop"}}},
-        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "riak_ts-develop"}}}
+        {lager, ".*", {git, "https://github.com/basho/lager.git", {tag, "3.2.4"}}},
+        {ranch, "0.4.0-p1", {git, "https://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
+        {ebloom, ".*", {git, "https://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
+        {riak_kv, ".*", {git, "https://github.com/basho/riak_kv.git", {branch, "riak_ts-develop"}}},
+        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "develop"}}}
        ]}.
 
 {edoc_opts, [{preprocess, true}]}.
