Use riak_ts-develop branch in riak_repl_pb_api

--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
         {ranch, "0.4.0-p1", {git, "https://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
         {ebloom, ".*", {git, "https://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
         {riak_kv, ".*", {git, "https://github.com/basho/riak_kv.git", {branch, "riak_ts-develop"}}},
-        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "develop"}}}
+        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {branch, "riak_ts-develop"}}}
        ]}.
 
 {edoc_opts, [{preprocess, true}]}.
