--- a/rebar.config
+++ b/rebar.config
@@ -12,8 +12,8 @@
         {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "3.2.4"}}},
         {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
         {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {tag, "2.1.7"}}},
-        {riak_repl_pb_api, ".*", {git, "git@github.com:basho/riak_repl_pb_api.git", {tag, "2.4.0"}}}
+        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {tag, "develeop-2.2.5"}}},
+        {riak_repl_pb_api, ".*", {git, "git//github.com/basho/riak_repl_pb_api.git", {branch, "develeop-2.2.5"}}}
        ]}.
 
 {edoc_opts, [{preprocess, true}]}.
