--- a/rebar.config
+++ b/rebar.config
@@ -9,11 +9,11 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
 
 {deps, [
-        {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "3.2.4"}}},
-        {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
-        {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
-        {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {tag, "develop-2.2.5"}}},
-        {riak_repl_pb_api, ".*", {git, "git://github.com/basho/riak_repl_pb_api.git", {branch, "develop-2.2.5"}}}
+        {lager, {git, "git://github.com/erlang-lager/lager.git", {tag, "3.6.4"}}},
+        {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
+        {ebloom,{git, "git://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
+        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0"}}},
+        {riak_repl_pb_api, {git, "git://github.com/basho/riak_repl_pb_api.git", {branch, "develop-3.0"}}}
        ]}.
 
 {edoc_opts, [{preprocess, true}]}.
