--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 %%-*- mode: erlang -*-
 
 {cover_enabled, true}.
-{erl_opts, [debug_info, warnings_as_errors,
+{erl_opts, [debug_info, %warnings_as_errors,
             {parse_transform, lager_transform},
             {platform_define, "^[0-9]+", namespaced_types}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
