Switch to gen_fsm_compat.

--- a/rebar.config
+++ b/rebar.config
@@ -9,6 +9,7 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
 
 {deps, [
+	gen_fsm_compat,
         {lager, {git, "git://github.com/erlang-lager/lager.git", {tag, "3.6.4"}}},
         {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
         {ebloom,{git, "git://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
