--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,7 @@
         {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
         {ebloom,{git, "git://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
         {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0"}}},
-        {riak_repl_pb_api, {git, "git://github.com/basho/riak_repl_pb_api.git", {branch, "develop-3.0-lower"}}}
+        {riak_repl_pb_api, {git, "git://github.com/basho/riak_repl_pb_api.git", {branch, "develop-3.0"}}}
        ]}.
 
 {edoc_opts, [{preprocess, true}]}.
