Add meck dependency for testing

--- a/rebar.config
+++ b/rebar.config
@@ -17,4 +17,8 @@
         {riak_repl_pb_api, {git, "git://github.com/basho/riak_repl_pb_api.git", {branch, "develop-3.0"}}}
        ]}.
 
+{profiles,
+       [{test, [{deps, [meck]}]}]
+}.
+
 {edoc_opts, [{preprocess, true}]}.
