--- a/rebar.config
+++ b/rebar.config
@@ -13,7 +13,7 @@
         {ranch, "0.4.0-p1", {git, "git://github.com/basho/ranch.git", {tag, "0.4.0-p1"}}},
         {ebloom, ".*", {git, "git://github.com/basho/ebloom.git", {tag, "2.0.0"}}},
         {riak_kv, ".*", {git, "git://github.com/basho/riak_kv.git", {tag, "riak_kv-2.9.0"}}},
-        {riak_repl_pb_api, ".*", {git, "git://github.com/basho/riak_repl_pb_api.git", {tag, "riak_kv-2.9.0"}}}
+        {riak_repl_pb_api, ".*", {git, "git://github.com/basho/riak_repl_pb_api.git", {tag, "riak_kv-2.9.0p1"}}}
        ]}.
 
 {edoc_opts, [{preprocess, true}]}.
