--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
         {ebloom,{git, "git://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
         {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0-riak_stat"}}},
         {riak_repl_pb_api, {git, "git://github.com/basho/riak_repl_pb_api.git", {branch, "develop-3.0"}}},
-  {riak_stat, {git, "https://github.com/bet365/riak_stat.git", {branch, "develop-3.0-riak_stat"}}}
+  {riak_stat, {git, "https://github.com/bet365/riak_stat.git", {branch, "develop-3.0-stats-work"}}}
 
 ]}.
 
