--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,7 @@
 
 {cover_enabled, true}.
 {erl_opts, [debug_info, %warnings_as_errors,
+            {i, "./_build/default/plugins/gpb/include"},
             {parse_transform, lager_transform},
             {platform_define, "^[0-9]+", namespaced_types}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
@@ -14,8 +15,16 @@
         {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
         {ebloom,{git, "git://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
         {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0"}}},
-        {riak_repl_pb_api, {git, "git://github.com/basho/riak_repl_pb_api.git", {branch, "develop-3.0"}}}
+        {riak_pb, {git, "git://github.com/basho/riak_pb.git", {branch, "develop-3.0"}}}
        ]}.
+
+{plugins, [rebar3_gpb_plugin]}.
+
+{gpb_opts, [{module_name_suffix, "_pb"},
+            {msg_name_to_lower, true},
+            {i, "src"}]}.
+
+{provider_hooks, [{pre, [{compile, {protobuf, compile}}]}]}.
 
 {profiles,
        [{test, [{deps, [meck]}]}]
