Better dialyzer checks

--- a/rebar.config
+++ b/rebar.config
@@ -26,6 +26,8 @@
 
 {provider_hooks, [{pre, [{compile, {protobuf, compile}}]}]}.
 
+{dialyzer, [{plt_apps, all_deps}]}.
+
 {profiles,
        [{test, [{deps, [meck]}]}]
 }.
