--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,7 @@
         {lager, {git, "git://github.com/erlang-lager/lager.git", {tag, "3.6.4"}}},
         {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
         {ebloom,{git, "git://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
-        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0-riak_stat"}}},
+        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0-riak_stat_merge"}}},
         {riak_repl_pb_api, {git, "git://github.com/basho/riak_repl_pb_api.git", {branch, "develop-3.0"}}}
         {riak_pb, {git, "git://github.com/basho/riak_pb.git", {branch, "develop-3.0"}}}
        ]}.
