Replace deprecated functions

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,13 @@
             {parse_transform, lager_transform},
             {platform_define, "^[0-9]+", namespaced_types}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
-{xref_checks, []}.
+
+{xref_checks,[
+        undefined_function_calls,
+        undefined_functions,
+        deprecated_function_calls, 
+        deprecated_functions]}.
+
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
 
 {deps, [
@@ -14,8 +20,8 @@
         {lager, {git, "git://github.com/erlang-lager/lager.git", {tag, "3.6.4"}}},
         {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
         {ebloom,{git, "git://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
-        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0"}}},
-        {riak_pb, {git, "git://github.com/basho/riak_pb.git", {branch, "develop-3.0"}}}
+        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0-292"}}},
+        {riak_pb, {git, "git://github.com/basho/riak_pb.git", {branch, "develop-3.0-292"}}}
        ]}.
 
 {plugins, [rebar3_gpb_plugin]}.
