Resolve deprecated functions
Support OTP 20-22

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,9 @@
 {erl_opts, [debug_info, %warnings_as_errors,
             {i, "./_build/default/plugins/gpb/include"},
             {parse_transform, lager_transform},
-            {platform_define, "^[0-9]+", namespaced_types}]}.
+            {platform_define, "^[0-9]+", namespaced_types},
+            {platform_define, "^[2-9][1-9](.?[0-9]*)", otp21},
+            {platform_define, "^[2-9][2-9](.?[0-9]*)", otp22}]}.
 {erl_first_files, ["src/gen_leader.erl"]}.
 
 {xref_checks,[
@@ -14,6 +16,8 @@
         deprecated_functions]}.
 
 {xref_queries, [{"(XC - UC) || (XU - X - B - cluster_info : Mod)", []}]}.
+
+{eunit_opts, [verbose]}.
 
 {deps, [
 	gen_fsm_compat,
