--- a/rebar.config
+++ b/rebar.config
@@ -24,12 +24,12 @@
         {lager, {git, "git://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
         {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
         {ebloom,{git, "git://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
-        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0-292"}}},
-        {riak_pb, {git, "git://github.com/basho/riak_pb.git", {branch, "develop-3.0-292"}}}
+        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0"}}},
+        {riak_pb, {git, "git://github.com/basho/riak_pb.git", {branch, "develop-3.0"}}}
        ]}.
 
 {plugins, [rebar3_gpb_plugin,
-           {rebar3_eqc, {git, "https://github.com/Vagabond/rebar3-eqc-plugin", {branch, "master"}}}]}.
+              {eqc_rebar, {git, "https://github.com/Quviq/eqc-rebar", {branch, "master"}}}]}.
 
 {gpb_opts, [{module_name_suffix, "_pb"},
             {msg_name_to_lower, true},
