--- a/rebar.config
+++ b/rebar.config
@@ -41,7 +41,7 @@
 
 {profiles,
        [{test, [{deps, [meck]}]},
-        {eqc, [{deps, [meck]}]}]
+        {eqc, [{deps, [meck]}, {erl_opts, [{d, 'EQC'}]}]}]
 }.
 
 {edoc_opts, [{preprocess, true}]}.
