Use tags for release

--- a/rebar.config
+++ b/rebar.config
@@ -23,9 +23,9 @@
 {deps, [
         {lager, {git, "git://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
         {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
-        {ebloom,{git, "git://github.com/basho/ebloom.git", {branch, "develop-3.0"}}},
-        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop-3.0"}}},
-        {riak_pb, {git, "git://github.com/basho/riak_pb.git", {branch, "develop-3.0"}}}
+        {ebloom,{git, "git://github.com/basho/ebloom.git", {tag, "2.1.0"}}},
+        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {tag, "riak_kv-3.0.0"}}},
+        {riak_pb, {git, "git://github.com/basho/riak_pb.git", {tag, "riak_kv-3.0.0"}}}
        ]}.
 
 {plugins, [rebar3_gpb_plugin,
