--- a/rebar.config
+++ b/rebar.config
@@ -24,8 +24,7 @@
         {lager, {git, "git://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
         {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
         {ebloom,{git, "git://github.com/basho/ebloom.git", {tag, "2.1.0"}}},
-        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {tag, "riak_kv-3.0.1"}}},
-        {riak_pb, {git, "git://github.com/basho/riak_pb.git", {tag, "riak_kv-3.0.1"}}}
+        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "mas-i1775-ttaaesafety"}}}
        ]}.
 
 {plugins, [{rebar3_gpb_plugin, {git, "https://github.com/basho/rebar3_gpb_plugin", {tag, "riak-3.0.1"}}},
