Initial OTP 24 build
Switch from lager to logger.

Update ranch (but not to latest version which requires switch to map syntax for options).

Passes xref, dialyzer, eunit on OTP 24 and OTP 22

EQC failures outstanding:

Failed: [{repl_leader_eqc,prop_main},
                {riak_core_cluster_conn_eqc,
                    {riak_core_cluster_conn_eqc,[module]}},
                {rt_source_eqc,prop_main}]

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,6 @@
 {erl_opts, [debug_info, 
             warnings_as_errors,
             {i, "./_build/default/plugins/gpb/include"},
-            {parse_transform, lager_transform},
             {platform_define, "^[0-9]+", namespaced_types},
             {platform_define, "^[2-9][1-9](.?[0-9]*)", otp21},
             {platform_define, "^[2-9][2-9](.?[0-9]*)", otp22}]}.
@@ -21,10 +20,9 @@
 {eunit_opts, [verbose]}.
 
 {deps, [
-        {lager, {git, "git://github.com/erlang-lager/lager.git", {tag, "3.8.0"}}},
-        {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.6.0"}}},
+        {ranch, {git, "git://github.com/ninenines/ranch.git", {tag, "1.8.0"}}},
         {ebloom,{git, "git://github.com/basho/ebloom.git", {tag, "2.1.0"}}},
-        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {tag, "riak_kv-3.0.9"}}}
+        {riak_kv, {git, "git://github.com/basho/riak_kv.git", {branch, "develop"}}}
        ]}.
 
 {plugins, [{rebar3_gpb_plugin, {git, "https://github.com/basho/rebar3_gpb_plugin", {tag, "2.15.1+riak.3.0.4"}}},
