Standardise Github Actions

--- a/rebar.config
+++ b/rebar.config
@@ -38,7 +38,8 @@
 
 {profiles,
        [{test, [{deps, [meck]}]},
-        {eqc, [{deps, [meck]}, {erl_opts, [{d, 'EQC'}]}]}]
-}.
+        {eqc, [{deps, [meck]}, {erl_opts, [{d, 'EQC'}]}]},
+        {gha, [{erl_opts, [{d, 'GITHUBEXCLUDE'}]}]}
+]}.
 
 {edoc_opts, [{preprocess, true}]}.
