Update tests to be OTP 24/25 compat
ct_slave no longer supported in OTP 25

--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,8 @@
             {i, "./_build/default/plugins/gpb/include"},
             {platform_define, "^[0-9]+", namespaced_types},
             {platform_define, "^[2-9][1-9](.?[0-9]*)", otp21},
-            {platform_define, "^[2-9][2-9](.?[0-9]*)", otp22}]}.
+            {platform_define, "^[2-9][2-9](.?[0-9]*)", otp22},
+            {platform_define, "^[2-9][5-9](.?[0-9]*)", otp25}]}.
 
 {erl_first_files, ["src/gen_leader.erl"]}.
 
